@@ -47,6 +47,7 @@
       },
       "runtime" : {
          "requires" : {
+            "Moo::_Utils" : "0",
             "perl" : "5.006",
             "strictures" : "2"
          }
@@ -57,6 +58,8 @@
             "File::Temp" : "0",
             "IO::Handle" : "0",
             "IPC::Open3" : "0",
+            "Moo" : "0",
+            "Test::Fatal" : "0",
             "Test::InDistDir" : "0",
             "Test::More" : "0",
             "blib" : "1.01",
