@@ -17,6 +17,7 @@ my %WriteMakefileArgs = (
   "MIN_PERL_VERSION" => "5.006",
   "NAME" => "MooX::ShortHas",
   "PREREQ_PM" => {
+    "Moo::_Utils" => 0,
     "strictures" => 2
   },
   "TEST_REQUIRES" => {
@@ -24,6 +25,8 @@ my %WriteMakefileArgs = (
     "File::Temp" => 0,
     "IO::Handle" => 0,
     "IPC::Open3" => 0,
+    "Moo" => 0,
+    "Test::Fatal" => 0,
     "Test::InDistDir" => 0,
     "Test::More" => 0,
     "blib" => "1.01",
@@ -42,6 +45,9 @@ my %FallbackPrereqs = (
   "File::Temp" => 0,
   "IO::Handle" => 0,
   "IPC::Open3" => 0,
+  "Moo" => 0,
+  "Moo::_Utils" => 0,
+  "Test::Fatal" => 0,
   "Test::InDistDir" => 0,
   "Test::More" => 0,
   "blib" => "1.01",
